# wasmi-sgx

./: .gitignore  .gitmodules  Makefile
app/: Cargo.toml
app/src/: main.rs
enclave/: Cargo.toml
enclave/sgxwasm/: Cargo.toml
enclave/sgxwasm/src/: lib.rs
enclave/sgxwasm/src/drivers/: mod.rs  spec_driver.rs
enclave/sgxwasm/src/drivers/ink_driver/: mod.rs
enclave/sgxwasm/src/drivers/ink_driver/contracts/: exec.rs  mod.rs  primitives.rs  schedule.rs  storage.rs  weights.rs
enclave/sgxwasm/src/drivers/ink_driver/contracts/wasm/: code_cache.rs  mod.rs  prepare.rs  runtime.rs
enclave/sgxwasm/src/drivers/ink_driver/contracts/wasm/env_def/: macros.rs
enclave/sgxwasm/src/drivers/ink_driver/executor/: executor.rs  mod.rs  wasm_runtime.rs
enclave/sgxwasm/src/drivers/ink_driver/executor/common/: error.rs  mod.rs  sandbox.rs  util.rs  wasm_runtime.rs
enclave/sgxwasm/src/drivers/ink_driver/sandbox/: without_std.rs
enclave/sgxwasm/src/drivers/ink_driver/wasm_interface/: mod.rs
enclave/src/: lib.rs
test_ink_contracts/: flipper.wasm  full_example.wasm
