[package]
name = "app"
version = "1.0.0"
authors = ["The Teaclave Authors"]
build = "build.rs"

[dependencies]
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
wabt = "0.9"
serde = {version = "1.0"}
serde_json = {version = "1.0"}
serde_derive = {version = "1.0"}
nan-preserving-float = "0.1.0"
